--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -5,7 +5,7 @@ name: Deploy
 # Controls when the workflow will run
 on:
   push:
-    branches: [ "prod" ]
+    branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch: 
