--- a/play-fortiswitch.yml
+++ b/play-fortiswitch.yml
@@ -41,6 +41,7 @@
           vlanid: 2
           interface: "internal"
           alias: "Management"
+          defaultgw: "enable"
 
     - name: SNMP system info configuration.
       fortinet.fortiswitch.fortiswitch_system_snmp_sysinfo:
