Remove pre-requisite check for every run and improve workflows

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,41 +1,18 @@
-# This is a basic workflow to help you get started with Actions
-
+# Workflow to deploy to a test environment and then to production
 name: Deploy
 
-# Controls when the workflow will run
+# Run on push to main
 on:
   push:
     branches: [ "main" ]
 
-  # Allows you to run this workflow manually from the Actions tab
+  # Allow manual runs
   workflow_dispatch: 
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-
-  pre-requisites:
-    # The type of runner that the job will run on
-    runs-on: self-hosted
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Install pipx
-        run: apt install pipx -y
-      
-      - name: Install ansible
-        run: apt install ansible -y
-
-      - name: Install ansible galaxy fortinet fortiswitch
-        run: ansible-galaxy collection install fortinet.fortiswitch
-
-        # For now OTA is unavailable
 #  deploy-ota:
 #          # The type of runner that the job will run on
 #    runs-on: self-hosted
-#    needs: pre-requisites
 #    steps:
       #      - name: Run FortiManager playbook
       #        run: ansible-playbook -i vars/hosts play-fortimanager.yml
@@ -44,7 +21,7 @@ jobs:
 
   deploy-prod:
     runs-on: self-hosted
-    needs: pre-requisites
+#    needs: deploy-ota
 
     steps:
       - name: Run Fortiswitch playbook
