--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -10,9 +10,25 @@ on:
   workflow_dispatch: 
 
 jobs:
+
+  build:
+    name: Ansible Lint # Naming the build is important to use it as a status check
+    runs-on: self-hosted
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run ansible-lint
+        uses: ansible/ansible-lint@main
+        # optional (see below):
+        with:
+          args: ""
+          setup_python: "true"
+          working_directory: ""
+          requirements_file: ""
+
 #  deploy-ota:
 #          # The type of runner that the job will run on
 #    runs-on: self-hosted
+#    needs: build
 #    steps:
       #      - name: Run FortiManager playbook
       #        run: ansible-playbook -i vars/hosts play-fortimanager.yml
@@ -21,6 +37,7 @@ jobs:
 
   deploy-prod:
     runs-on: self-hosted
+    needs: build
 #    needs: deploy-ota
 
     steps:
