--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
-      - name: Run Fortiswitch playbook
+      - name: Run Ansible Lint
         run: ansible-lint play-fortiswitch.yml
 
 
