--- a/requirements.yml
+++ b/requirements.yml
@@ -1,3 +1,6 @@
 ---
 collections:
   - name: fortinet.fortiswitch
+    source: galaxy.ansible.com
+  - name: ansible.netcommon
+    source: galaxy.ansible.com
