--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: self-hosted
     steps:
       - uses: actions/checkout@v2
+      - name: Ensure collections are present
+        run: ansible-galaxy collection install -r requirements.yml
       - name: Run Ansible Lint
         run: ansible-lint play-fortiswitch.yml
 
